# redshift-mcp-pldemo

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
dev/: config.dev.yaml
src/redshift_mcp_pldemo/: __init__.py  _config.py  config.yaml  query.py
src/redshift_mcp_pldemo/queries/: event_api.sql
tests/: test_date_validation.py  test_external_config.py  test_sql_template.py
